--- a/login.html
+++ b/login.html
@@ -12,12 +12,12 @@
     <div class="box">
         <div class="formulario">
             <form action="">
-                <label class="row" for="">Email</label>
+                <label class="row" for="">Email address</label>
                 <input class="row" type="email" name="email">
                 <label class="row" for="">Password</label>
                 <input class="row" type="password" name="password">
-                <a class="ref" href="">Olvidaste tu contraseña?</a>
-                <button class="boton">Login</button>
+                <a class="ref" href="">Forgot your password?</a>
+                <button class="boton">Sign in</button>
             </form>
         </div>
     </div>
